# Movies

./: .env  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
Back/: .env  main.py  my_database_dump.sql  requirements.txt
Back/apps/auth/: db_queries.py  models.py  oauth2.py  routes.py  schemas.py
Back/apps/movies/: db_queries.py  models.py  routes.py  schemas.py
Back/apps/rated_films/: db_queries.py  models.py  routes.py
Back/apps/user/: db_queries.py  models.py  routes.py  schemas.py
Movies/: Dockerfile  main.py  pyproject.toml
Movies/alembic/: env.py
Movies/alembic/versions/: ef558cbbdd46_fix_password_length.py
Movies/src/movies/apps/auth/: db_queries.py  models.py  routes.py  schemas.py
Movies/src/movies/apps/movies/: db_queries.py
Movies/src/movies/apps/rated_films/: db_queries.py  models.py  schemas.py
Movies/src/movies/apps/user/: db_queries.py
nginx/: nginx.conf
numbers/: pyproject.toml
src/movies/apps/auth/: db_queries.py  hash_password.py  models.py  oauth2.py  routes.py  schemas.py
src/movies/apps/movies/: db_queries.py  models.py  routes.py  schemas.py
src/movies/apps/rated_films/: db_queries.py  models.py  routes.py  schemas.py
src/movies/apps/user/: db_queries.py  models.py  routes.py  schemas.py
