[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "evavallistu", email = "evavallistu@gmail.com" }
]
requires-python = ">=3.11, <4"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
